# yk_util

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  antora-playbook.yml  package-lock.json  package.json
.github/workflows/: format.yml  run_test.yml
doc/: antora.yml  index.adoc
include/yk/: arch.hpp  array.hpp  bitmask_enum.hpp  boolean_testable.hpp  chrono.hpp  colorize.hpp  compare.hpp  concurrent_deque.hpp  concurrent_pool.hpp  concurrent_pool_gate.hpp  concurrent_pool_types.hpp  concurrent_vector.hpp  enum.hpp  enum_bitops.hpp  enum_bitops_algorithm.hpp  enum_bitops_io.hpp  fixed_string.hpp  flat_set.hpp  hash.hpp  inplace_vector.hpp  interrupt_exception.hpp  lifetimebound.hpp  maybe_mutex.hpp  no_unique_address.hpp  par_for_each.hpp  print.hpp  printt.hpp  proxy_hash.hpp  stack.hpp  string_hash.hpp  throwt.hpp  variant.hpp  variant_view.hpp
include/yk/allocator/: concepts.hpp  default_init_allocator.hpp
include/yk/compare/: adaptor.hpp  common_ordering.hpp  comparator.hpp  concepts.hpp  then.hpp
include/yk/detail/: string_like.hpp  traced_type.hpp  type_list.hpp
include/yk/exec/: atomic_queue.hpp  concurrent_gate.hpp  cv_deque.hpp  cv_inplace_vector.hpp  cv_queue.hpp  cv_queue_types.hpp  cv_vector.hpp  debug.hpp  queue_gate.hpp  queue_traits.hpp  scheduler.hpp  scheduler_delta_stats.hpp  scheduler_stats.hpp  scheduler_stats_tracker.hpp  scheduler_traits.hpp  thread_id.hpp  thread_index.hpp  worker_pool.hpp  worker_types.hpp
include/yk/exec/port/: boost_lockfree_queue.hpp  boost_lockfree_stack.hpp
include/yk/exec/port/detail/: boost_lockfree_common.hpp
include/yk/hash/: adapt.hpp  boost.hpp  hash.hpp  hash_combine.hpp  hash_value_for.hpp  proxy_hash.hpp  range.hpp  std.hpp  string_hash.hpp
include/yk/hash/hash_value_for/: boost.hpp  fwd.hpp  std.hpp
include/yk/ranges/: concat.hpp
include/yk/reflection/: enum_to_string.hpp
include/yk/util/: all_same.hpp  always_false.hpp  array_cat.hpp  auto_sequence.hpp  exactly_once.hpp  find_type_index.hpp  forward_like.hpp  functional.hpp  hash.hpp  overloaded.hpp  pack_indexing.hpp  perfect_forward_as_tuple.hpp  reverse.hpp  specialization_of.hpp  to_array_of.hpp  to_subrange.hpp  to_underlying.hpp  type_list.hpp  wrap_as.hpp
include/yk/util/hash/: boost.hpp  hash.hpp  hash_combine.hpp  std.hpp
include/yk/util/to_subrange/: boost.hpp  std.hpp  to_subrange.hpp
include/yk/variant/: boost.hpp  std.hpp  traits.hpp  variant.hpp
include/yk/variant/boost/: compare.hpp  traits.hpp
include/yk/variant_view/: boost.hpp  hash.hpp  std.hpp  traits.hpp  variant_view.hpp
include/yk/variant_view/hash/: boost_hash.hpp  std_hash.hpp
test/: CMakeLists.txt  atomic_queue.cpp  colorize.cpp  compare.cpp  concurrency.cpp  concurrent.cpp  dummy.cpp  enum_bitops.cpp  fixed_string.cpp  flat_meow.cpp  hash.cpp  main.cpp  meta.cpp  scheduler.cpp  test.cpp  test_utility.cpp  test_utility.hpp  util.cpp  variant_view.cpp
